# claude-code-rust

./: CONFIG_REFACTORING.md  Cargo.toml  Claude Code 源码深度分析（2026-03-31）.md  INSTALL.md  README.md  VERSIONING.md  functionality_test.bat  package.json  performance_test.bat
.claude/: settings.local.json
.github/workflows/: release.yml
cc-switch-main/: package.json  pnpm-lock.yaml
crates/api-client/src/: client.rs  integration.rs  oauth.rs  streaming.rs  tool_use.rs
crates/claude-cli/: Cargo.toml
crates/runtime/src/: compact.rs
crates/tools/: Cargo.toml
crates/tools/src/: base.rs  file_tools.rs  lib.rs  permissions.rs  registry.rs
gui-client/: package-lock.json  package.json
scripts/: build.js  setup-powershell.ps1  version.js
src/: error.rs  lib.rs  main.rs
src/agents/: agent.rs  fork.rs
src/commands/: buddy.rs  cli.rs  interactive.rs  mod.rs  plugins.rs  query.rs  types.rs  upgrade.rs  voice.rs
src/commands/config/: effort.rs  fast.rs  mod.rs  model.rs
src/commands/conversation/: compact.rs  export.rs  mod.rs  rename.rs  resume.rs  rewind.rs
src/commands/git/: branch.rs  commit.rs  commit_push_pr.rs  diff.rs  mod.rs  pr_comments.rs  review.rs  security_review.rs
src/commands/system/: doctor.rs  mod.rs
src/config/: api_config.rs  migration.rs  mod.rs  system_prompt.rs  validation.rs
src/daemon/: mod.rs
src/editor_compat/: lsp.rs
src/features/: buddy.rs  kairos.rs
src/plugins/: isolation.rs  manager.rs  traits.rs
src/prompt/: cache.rs  mod.rs
src/query/: compressor.rs  context.rs  engine.rs  mod.rs  retry.rs
src/services/: plugin_marketplace_error.rs
src/skills/: discovery.rs  executor.rs  loader.rs  mod.rs  registry.rs
src/teleport/: context.rs  executor.rs  mod.rs  packet.rs  protocol.rs  remote.rs
src/tools/: agent.rs  cron_tools.rs  git_tools.rs  lsp_tools.rs  message_tools.rs  mod.rs  plan_tools.rs  skill_tools.rs  task_tools.rs  team_tools.rs  time_tools.rs  tool_search.rs  user_tools.rs  web_tools.rs
src/uds/: fusion.rs  message.rs  mod.rs  queue.rs  routing.rs  server.rs
src/ultrareview/: analysis.rs  cloud.rs  collaboration.rs  mod.rs  quality.rs  report.rs
